Fix livefeedback reports not visible to livestream host

--- a/templates/mobile/app.css
+++ b/templates/mobile/app.css
@@ -2847,6 +2847,9 @@ form[id^="smallpart-start"] {
 #smallpart-student-index_smallpart-student-livefeedback et2-details.lfReport {
   min-width: 18em;
 }
+#smallpart-student-index_smallpart-student-livefeedback et2-details.lfReport smallpart-livefeedback-report::part(report-list) {
+  height: auto;
+}
 #smallpart-student-index_smallpart-student-livefeedback et2-details.lfReport::part(content) {
   max-height: 400px;
   overflow-y: auto;
